--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "angular": "^1.4.9",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.0",
     "gutil": "^1.6.4",
+    "html-loader": "^0.4.0",
+    "jade": "^1.11.0",
+    "jade-loader": "^0.8.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.11"
   },
   "devDependencies": {},
