--- a/package.json
+++ b/package.json
@@ -3,24 +3,27 @@
   "version": "0.0.1",
   "description": "Example build",
   "private": true,
+  "scripts": {
+    "build": "./node_modules/.bin/webpack -p",
+    "watch": "./node_modules/.bin/webpack-dev-server --progress --colors --inline --hot"
+  },
   "dependencies": {
     "angular": "^1.4.9",
+    "angular-ui-router": "^0.2.17",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
-    "gulp": "^3.9.0",
-    "gutil": "^1.6.4",
     "html-loader": "^0.4.0",
     "jade": "^1.11.0",
-    "jade-loader": "^0.8.0",
+    "jade-html-loader": "0.0.3",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.11"
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {},
-  "scripts": {},
   "author": "Eden Sun"
 }
